--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
