--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
+    "@heroicons/react": "^2.2.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "js-cookie": "^3.0.5",
