--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-big-calendar": "^1.19.4",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hook-form": "^7.66.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.16",
