--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
     "**/*.mts",
     ".next\\dev/types/**/*.ts",
     ".next\\dev/types/**/*.ts"
-, "middleware.ts"  ],
+, "middleware.ts", "app/admin/page.tsc"  ],
   "exclude": [
     "node_modules"
   ]
